# resume_parser

./: .gitignore  .pylintrc  LICENSE  README.md  cli.py  environment.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pylint.yml  tests.yml
config/: patterns.py
data/: skills_master.json
extractors/: base_extractor.py  certifications_extractor.py  contact_extractor.py  education_extractor.py  experience_extractor.py  skills_extractor.py  summary_extractor.py
resume_parser/: __init__.py  cli.py  main.py
resume_parser/config/: patterns.py
resume_parser/data/: skills_master.json
resume_parser/extractors/: base_extractor.py  contact_extractor.py  education_extractor.py  experience_extractor.py  summary_extractor.py
resume_parser/utils/: display.py  file_reader.py  regex_helpers.py  section_finder.py  skills_checker.py  skills_list_loader.py  text_normalizer.py
samples/: sample_resume.docx
skills_checker/: skills_checker.py
src/: __init__.py  parser.py
src/data/: skills_master.json
src/utils/: __init__.py  extractor.py  extractor_edu_exp.py  extractor_profile.py  file_reader.py  skills_loader.py
tests/: conftest.py  test_cli_integration.py  test_contact_extractor.py  test_education_extractor.py  test_experience_extractor.py  test_skills_checker.py
tests/data/fake_resumes/: sample_resume.txt  sample_resume_2.txt  sample_resume_3.txt
utils/: display.py  file_reader.py  regex_helpers.py  section_finder.py  skills_list_loader.py  text_normalizer.py
